ручка обновления профиля по user_id
